syntax = "proto3";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  // Returns the pod name
  rpc GetPodName (PodNameRequest) returns (PodNameReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The request message for pod name
message PodNameRequest {}

// The response message containing the pod name
message PodNameReply {
  string pod_name = 1;
}

// The storage service definition.
service Storage {
  // Writes a string to a file
  rpc WriteFile (WriteFileRequest) returns (WriteFileReply);
  // Reads a file
  rpc ReadFile (ReadFileRequest) returns (ReadFileReply);
  // Deletes a file
  rpc DeleteFile (DeleteFileRequest) returns (DeleteFileReply);
  // Lists all files
  rpc ListFiles (ListFilesRequest) returns (ListFilesReply);
}

// The request message for writing a file
message WriteFileRequest {
  string filename = 1;
  string content = 2;
}

// The response message for write operation
message WriteFileReply {
  bool success = 1;
  string message = 2;
}

// The request message for reading a file
message ReadFileRequest {
  string filename = 1;
}

// The response message for read operation
message ReadFileReply {
  bool success = 1;
  string content = 2;
  string message = 3;
}

// The request message for deleting a file
message DeleteFileRequest {
  string filename = 1;
}

// The response message for delete operation
message DeleteFileReply {
  bool success = 1;
  string message = 2;
}

// The request message for listing files
message ListFilesRequest {}

// The response message for list operation
message ListFilesReply {
  bool success = 1;
  repeated string filenames = 2;
  string message = 3;
}

// The leader election service definition.
service LeaderElection {
  // Checks if this instance is the leader
  rpc IsLeader (IsLeaderRequest) returns (IsLeaderReply);
}

// The request message for checking leader status
message IsLeaderRequest {}

// The response message for leader status
message IsLeaderReply {
  bool is_leader = 1;
  string leader_id = 2;
}
